src/test/ui/error-codes/E0507.stderr
error[E0507]: cannot move out of dereference of `std::cell::Ref<'_, TheDarkKnight>`
  --> $DIR/E0507.rs:12:5
   |
LL |     x.borrow().nothing_is_true();
   |     ^^^^^^^^^^ move occurs because value has type `TheDarkKnight`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
